Content geared to academia and filled in using primarily content from the PDF resume. Began a convention of linking to work samples and learning materials in the skills section.

--- a/resume/index.html
+++ b/resume/index.html
@@ -40,54 +40,63 @@
 		</div>
 
 
+		<!-- EDUCATION -->
+		<section class="education">
+			<div class="content-wrap">
+				<h2 class="subsection">Research Assistantship</h2>
+				<div class="item clearfix">
+					<div class="details">
+						<p class="date">Sept 2010 - Present</p>
+					</div>
+					<div class="description">
+						<p><strong>Nonlinear optimization project:</strong> Working to develop strong SDP relaxations of QPCCs (quadratic problems with complementarity constraints) and leverage them to develop better local and global solution methods for this class of problems.</p>
+
+						<p><strong>Software project:</strong> Developing a suite of tools which enable a user to work with QPCCs and their SDP relaxations in Python while using test problem generators and solvers which are ordinarily spread across Matlab, AMPL, and GAMS, including an interface to NEOS so users can test their problems on a wide range of solvers they may not have licenses for. The project will be released as open source software.</p>
+					</div>
+				</div><!-- close .item -->
+
+				<h2>Education</h2>
+
+				<div class="item">
+					<h3>Polytechnique Montreal, 2010-present</h3>
+					<h4>PhD candidate, Applied Mathematics</h4>
+					<p></p>
+				</div>
+				<div class="item">
+					<h3>University of Waterloo, 2005-2010</h3>
+					<h4>B. Math Honours in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h4>
+				</div>
+				<div class="item">
+					<h3>Kyoto University, Japan, 2008-2009</h3>
+					<h4>Undergraduate exchange student, Department of Informatics</h4>
+				</div>
+				<div class="item">
+					<h3>Renison University College, 2006-2010</h3>
+					<h4>Diploma in Japanese Language</h4>
+				</div>
+			</div>
+		</section>
+
 		<!-- WORK EXPERIENCE -->
 		<section class="work-experience">
 			<div class="content-wrap">
-				<h2>Work Experience</h2>
+				<h2 class="subsection">Publications</h2>
+				<p>J. Kawamoto, P. L. Gillett, “Frequency-based Constraint Relaxation for Private Query Processing in Cloud Databases,” Proc. of the 27th Annual IEEE Canadian Conference on Electrical and Computer Engineering, pp.1275-1280, Toronto, May 2014.</p>
+				<p>J. Kawamoto, P. L. Gillett, J. Sakuma, プライベート問合せにおける問合せ頻度を用いた制約緩和手法 (Frequency-based Constraint Relaxation for Private Query), IPSJ Transactions on Databases, Vol.6, No.3, pp.50-60, June 2013 (in Japanese).</p>
 
-				<div class="item clearfix">
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job title 1</h3>
-						<p class="date">July 2014 - Present</p>
-						<h3>Job title 2</h3>
-						<p class="date">July 2011 - July 2014</p>
-					</div>
-					<div class="description">
-						<p><strong>Job title 1:</strong> [You can use this portion if you held several positions in the company.] Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
+				<h2 class="subsection">Presentations</h2>
+				<p>P. L. Gillett, M. F. Anjos, J. Judice, Combining semidefinite relaxations and NLP solvers for improved feasible solutions of QPLCCs, INFORMS, Philadelphia, Nov 2015</p>
+				<p>P. L. Gillett, M. F. Anjos, J. Judice, Combining semidefinite relaxations and NLP solvers for improved feasible solutions of QPLCCs, CORS-INFORMS, Montreal, June 2015</p>
+				<p>P. L. Gillett, M. F. Anjos, Finding better solutions to nonconvex quadratic equilibrium problems using semidefinite programming, Optimization Days, Montreal, May 2014.</p>
+				<p>P. L. Gillett, M. F. Anjos, Semidefinite programming approaches for a class of complementarity problems, Optimization Days, Montreal, May 2012.</p>
+  			<p>P. L. Gillett, M. F. Anjos, Semidefinite programming approaches for a class of complementarity problems, Meet a GERAD Researcher Seminar Series, Montreal, March 2012.</p>
+  			<p>P. L. Gillett, M. F. Anjos, Semidefinite programming approaches for complementarity problems, Optimization Days, Montreal, May 2011.</p>
 
-						<p><strong>Job title 2:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas, odio deleniti omnis. Eaque, numquam itaque! Maxime, iure dolore ratione tenetur. Sunt nam maxime repellendus! Vitae, natus fugit earum consectetur.</p>
-					</div>
-				</div><!-- close .item -->
+				<h2 class="subsection">Poster Presentations</h2>
+				<p>P. L. Gillett, M. F. Anjos, A semidefinite programming approach for nonconvex quadratic optimization with complementarity constraints, Women Optimize in the West, Calgary, June 2013.</p>
+				<p>P. L. Gillett, M. F. Anjos, A semidefinite programming approach for nonconvex quadratic Optimization with complementarity constraints, Polynomial Optimisation Workshop, Cambridge, UK, July 2013.</p>
 
-				<div class="item clearfix">
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job title</h3>
-						<p class="date">September 2012 - Present</p>
-					</div>
-					<div class="description">
-						<p>Description for item 2.  Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-					</div>
-				</div><!-- close .item -->
 
-				<div class="item clearfix">
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job Title</h3>
-						<p class="date">March 2013 - February 2014</p>
-					</div>
-					<div class="description">
-						<p>Description for item 3.  Redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-
-						<p>Key contributions:</p>
-						<ul>
-							<li>Responsible for ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-							<li>Created ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-							<li>Organized ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-						</ul>
-					</div>
-				</div><!-- close .item -->
 			</div>
 		</section>
 
@@ -95,12 +104,13 @@
 		<section class="skills">
 			<div class="content-wrap">
 				<h2>Skills</h2>
+				<p><span class="accent">Where possible, with <u>links</u> to work samples or learning resources I have used.</span></p>
 
 				<div class="skills-list clearfix">
 					<h3>Computational Skills</h3>
 
 					<div class="columns">
-						<h4>Scientific computing with Python:</h4>
+						<h4>Scientific computing in Python:</h4>
 						<ul>
 							<li><i class="fa fa-star"></i> General (numpy, scipy)</li>
 							<li><i class="fa fa-star"></i> Conic optimization<br> (cvxpy, cvxopt)</li>
@@ -124,8 +134,8 @@
 						<h4>Other languages:</h4>
 						<ul>
 							<li><i class="fa fa-star"></i>LaTeX</li>
-							<li><i class="fa fa-star-half-full"></i>HTML/CSS</li>
-							<li><i class="fa fa-star-half-full"></i>Hadoop</li>
+							<li><i class="fa fa-star-half-full"></i><a href="https://github.com/discardthree/littlekitune-homepage">HTML/CSS</a></li>
+							<li><i class="fa fa-star-half-full"></i><a href="https://www.udacity.com/course/intro-to-hadoop-and-mapreduce--ud617">Hadoop</a></li>
 						</ul>
 						<p>
 							<span class="accent">Languages I have history with but<br>	 have not used recently:</span><br>
@@ -134,93 +144,22 @@
 					</div>
 				</div>
 
-
-				<div class="skills-list clearfix">
-					<h3>Knowledge</h3>
-
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star"></i> Conic optimization</li>
-							<li><i class="fa fa-star"></i> Nonconvex optimization</li>
-						</ul>
-					</div>
-
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star-half-full"></i> Discrete optimization</li>
-							<li><i class="fa fa-star-half-full"></i> Equilibrium problems / <br> Game theory</li>
-						</ul>
-					</div>
-
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star"></i> Computational statistics</li>
-							<li><i class="fa fa-star-half-full"></i> Simulation</li>
-						</ul>
-					</div>
-				</div>
-
 				<div class="skills-circles">
 					<h3>Working methods:</h3>
 					<ul>
 						<li><span>Algorithm design</span></li>
-						<li><span>Test driven development</span></li>
-						<li><span>Version control using Git</span></li>
-						<li><span>Remote collaboration</span></li>
+						<li><span><a href="https://www.coursera.org/account/accomplishments/verify/934P6WFGUB2Q">Agile development practices</a></span></li>
+						<li><span><a href="http://www.amazon.com/Test-Driven-Development-By-Example/dp/0321146530">Test driven development</a></span></li>
+						<li><span><a href="http://github.com/discardthree">Version control using Git</a></span></li>
 						<li><span>Academic writing/editing</span></li>
 					</ul>
 				</div><!-- close .skills-circles -->
 
-				<div class="skills-list clearfix">
-					<h3>Bonus superpowers:</h3>
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star"></i> Japanese language</li>
-						</ul>
-					</div>
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star"></i> 3D printing</li>
-							<li><i class="fa fa-star-half-full"></i> Raspberry Pi</li>
-						</ul>
-					</div>
-					<div class="columns">
-						<ul>
-							<li><i class="fa fa-star"></i> Hydroponic gardening</li>
-						</ul>
-					</div>
 				</div>
 
 			</div><!-- close .skills-list -->
 		</section>
 
-
-		<!-- EDUCATION -->
-		<section class="education">
-			<div class="content-wrap">
-				<h2>Education</h2>
-
-				<div class="item">
-					<h3>Polytechnique Montreal, 2010-present</h3>
-					<h4>PhD candidate, Applied Mathematics</h4>
-					<p></p>
-				</div>
-				<div class="item">
-					<h3>University of Waterloo, 2005-2010</h3>
-					<h4>B. Math in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h4>
-					<p>A multidisciplinary program in which several mathematical fields are studied from a computational perspective with a foundation in numerics (algorithm stability, convergence, etc), modeling, simulation, and algorithm design.  For the option I chose, I took particular depth in Computational Math's Linear Algebra, Statistics, and Optimization branches, as well as a foundation in Economics.  </p>
-				</div>
-				<div class="item">
-					<h3>Kyoto University, Japan, 2008-2009</h3>
-					<h4>Undergraduate exchange student, Department of Informatics</h4>
-					<p>My goal in the exchange was to become able to function in my field in Japanese.  I took a variety of core courses (Linear Algebra, Optimization, DEswhile also benefitting from some courses not offered at Waterloo for exampleTook courses such as Image Processing, Automata, Differential Equations, Queue Theory, Graph Theory, and advanced Japanese language.  The language of instruction for all courses was Japanese.</p>
-				</div>
-				<div class="item">
-					<h3>Renison University College, 2006-2010</h3>
-					<h4>Diploma in Japanese Language</h4>
-				</div>
-			</div>
-		</section>
 
 		<!-- CONTACT INFO -->
 		<section class="contact">
