In education section, swap the order/position/size of degree/diploma name and institution information.

--- a/resume/index.html
+++ b/resume/index.html
@@ -58,21 +58,21 @@
 				<h2>Education</h2>
 
 				<div class="item">
-					<h3>Polytechnique Montreal, 2010-present</h3>
-					<h4>PhD candidate, Applied Mathematics</h4>
+					<h3>PhD candidate, Applied Mathematics</h3>
+					<h4>2010-present, Polytechnique Montreal</h4>
 					<p></p>
 				</div>
 				<div class="item">
-					<h3>University of Waterloo, 2005-2010</h3>
-					<h4>B. Math Honours in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h4>
+					<h3>B. Math Honours in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h3>
+					<h4>2005-2010, University of Waterloo</h4>
 				</div>
 				<div class="item">
-					<h3>Kyoto University, Japan, 2008-2009</h3>
-					<h4>Undergraduate exchange student, Department of Informatics</h4>
+					<h3>Undergraduate exchange student, Department of Informatics</h3>
+					<h4>2008-2009, Kyoto University, Japan</h4>
 				</div>
 				<div class="item">
-					<h3>Renison University College, 2006-2010</h3>
-					<h4>Diploma in Japanese Language</h4>
+					<h3>Diploma in Japanese Language</h3>
+					<h4>2006-2010, Renison University College</h4>
 				</div>
 			</div>
 		</section>
