Downgraded sizes of the elements in Education.

--- a/resume/index.html
+++ b/resume/index.html
@@ -58,21 +58,20 @@
 				<h2>Education</h2>
 
 				<div class="item">
-					<h3>PhD candidate, Applied Mathematics</h3>
-					<h4>2010-present, Polytechnique Montreal</h4>
-					<p></p>
+					<h4>PhD candidate, Applied Mathematics</h4>
+					<p>2010-present, Polytechnique Montreal</p>
 				</div>
 				<div class="item">
-					<h3>B. Math Honours in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h3>
-					<h4>2005-2010, University of Waterloo</h4>
+					<h4>B. Math Honours in <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Honours-Computational-Mathematics?ActiveDate=9/1/2009">Computational Mathematics</a>, <a href="http://ugradcalendar.uwaterloo.ca/page/MATH-Hon-Computational-Math-Economics-Option?ActiveDate=9/1/2009">Economics option</a></h4>
+					<p>2005-2010, University of Waterloo</p>
 				</div>
 				<div class="item">
-					<h3>Undergraduate exchange student, Department of Informatics</h3>
-					<h4>2008-2009, Kyoto University, Japan</h4>
+					<h4>Undergraduate exchange student, Department of Informatics</h4>
+					<p>2008-2009, Kyoto University, Japan</p>
 				</div>
 				<div class="item">
-					<h3>Diploma in Japanese Language</h3>
-					<h4>2006-2010, Renison University College</h4>
+					<h4>Diploma in Japanese Language</h4>
+					<p>2006-2010, Renison University College</p>
 				</div>
 			</div>
 		</section>
