Fix broken links to social media profiles.

--- a/resume/index.html
+++ b/resume/index.html
@@ -166,8 +166,8 @@
 				<h2>Let's keep in touch!</h2>
 
 				<div class="social">
-					<p>LinkedIn: <a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a><br>
-					Github: <a href="github.com/discardthree" title="Github"><i class="fa fa-github-alt"></i></a><br>
+					<p>LinkedIn: <a href="http://ca.linkedin.com/in/plgillett" title="LinkedIn"><i class="fa fa-linkedin"></i></a><br>
+					Github: <a href="http://www.github.com/discardthree" title="Github"><i class="fa fa-github-alt"></i></a><br>
 					Facebook: <a href="http://www.facebook.com/plgillett/" title="Facebook"><i class="fa fa-facebook"></i></a>
 					</p>
 				</div>
