--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<!-- HEADER -->
-		<a class="download" href="Resume_Patricia_Gillett_2015.pdf">Looking for a more standard format? (.pdf)</a>
+		<a class="download" href="Resume_Patricia_Gillett_2015.pdf">Looking for a more<br>standard format?<br>(.pdf)</a>
 		<header>
 			<div class="content-wrap-header">
 				<h1><span class="accent">Patricia L.</span> Gillett-Kawamoto</h1>
