--- a/resume/index.html
+++ b/resume/index.html
@@ -120,10 +120,10 @@
 						<h4>Scientific computing in Python:</h4>
 						<ul>
 							<li><i class="fa fa-star"></i> General (numpy, scipy)</li>
-							<li><i class="fa fa-star"></i> Convex optimization<br> (cvxpy, cvxopt)</li>
+							<li><i class="fa fa-star"></i> Convex optimization (cvxpy, cvxopt)</li>
 							<li><i class="fa fa-star"></i> Using the NEOS server (xml-rpc)</li>
                             <li><i class="fa fa-star"></i> Data analysis (pandas)</li>
-                            <li><i class="fa fa-star"></i> Data visualization<br> (matplotlib, seaborn)</li>
+                            <li><i class="fa fa-star"></i> Data visualization (matplotlib, seaborn)</li>
 							<li><i class="fa fa-star-half-full"></i> Machine learning (scikit-learn)</li>
 						</ul>
 					</div>
