--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 		<title>Patricia Gillett | Foxes in boxes</title>
 		<link href='https://fonts.googleapis.com/css?family=Dancing+Script:700|Gentium+Book+Basic:400,400italic|Open+Sans:700' rel='stylesheet' type='text/css'>
 		<link href="css/style_home.css" rel="stylesheet">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Little Kitune">
+    <meta name="author" content="Trish">
+    <meta name="Identifier-URL" content="https://www.littlekitune.org/" />
+
+    <meta property="og:title" content="Little Kitune." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.littlekitune.org/" />
+    <meta property="og:description" content="Little Kitune" />
+
 	</head>
 	<body class="home">
 		<header>
