--- a/resume/index.html
+++ b/resume/index.html
@@ -9,12 +9,21 @@
 		<link href='https://fonts.googleapis.com/css?family=Merriweather%7CPacifico%7CGentium+Book+Basic:400,400italic%7COpen+Sans:700' rel='stylesheet' type='text/css'>
 
 		<!-- icon fonts -->
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<link rel="stylesheet" href="../css/animate.css">
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link href="../css/style_resume.css" rel="stylesheet">
 
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Trish's Resume">
+    <meta name="author" content="Patricia L. Gillett-Kawamoto">
+    <meta name="Identifier-URL" content="https://www.littlekitune.org/resume/index.html" />
+
+    <meta property="og:title" content="Trish's Resume" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.littlekitune.org/resume/index.html" />
+    <meta property="og:description" content="Trish's Resume" />
 
 	</head>
 	<body>
