Update the copyright notation.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section>
 		</section>
 		<footer>
-			 <p> &copy; 2015 by <a href="http://littlekitune.org">Littlekitune</a>
+			 <p> &copy; 2015-2017 by <a href="http://www.littlekitune.org">Littlekitune</a>
 			 </p>
 		</footer>
 	</body>
