Change the job posting link.

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
 				<div class="summary">
 					<h2 class="animated">Hello!</h2>
 					<p>I'm a trained computational mathematician and operations researcher.  My passions are for scientific computing and the modeling and optimizing of systems.  I love being part of the implementation, especially the juicy mathematically intense bits.  </p>
-					<p>Since 2016 I've been building recommender systems with the Discovery Algorithms team at Shopify and it's been awesome. We're hiring in a lot of positions, <a href="trish.gillett@shopify.com">Drop me a line</a> or <a href="http://www.shopify.com/careers">check out our job postings</a>!
+					<p>Since 2016 I've been building recommender systems with the Discovery Algorithms team at Shopify and it's been awesome. <a href="trish.gillett@shopify.com">Drop me a line</a> or <a href="https://jobs.lever.co/shopify/f725994d-33a5-443e-8d9a-d990642df75b?lever-via=1Cv559akk0">learn more about openings in Shopify data</a>!
 				</div>
 			</div>
 		</section>
